--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MODE=development
-CRON="1/2 * * * * *"
+#MODE=development
+MODE=production
+#CRON="1/2 * * * * *"
+CRON="0 0 0 * * *"
 DATABASE_URL=sqlite://speedy.db?mode=rwc
